--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>🏛️ Muzeu</title>
-    <link rel="icon" type="image/png" href="poza1.png">
+    <link rel="icon" type="image/png" href="images/poza1.jpg">
     <style>
       ::-webkit-scrollbar {
         width: 10px;
