--- a/index.html
+++ b/index.html
@@ -299,15 +299,15 @@ p {
       <div class="footer">
         <h1>&copy; 2025 All rights reserved.</h1>
         <h1>Website created by <strong>Bumbu Vlad</strong>
-          <br>Bulachi Felicia
+          <br>Bulachii Felicia
         <br>Design by <strong>Bumbu Vlad</strong>
-          <br>Bulachi Felicia
+          <br>Bulachii Felicia
         </strong>
         </h1>
         <h1>Contact: <a href="mailto:MuzeuldinHirbovat@gmail.com" class="footer1">MuzeuldinHirbovat@gmail.com</a></h1>
         <h1>Follow us on 
         <br>Instagram:
-        <br><a href="https://www.instagram.com/bulachii3?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="footer1">Bulachi Felicia</a>
+        <br><a href="https://www.instagram.com/bulachii3?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="footer1">Bulachii Felicia</a>
         <br><a href="https://www.instagram.com/ash.v.b?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="footer1">Bumbu Vlad</a></h1>
       </div>
     </footer>  
